# pomodoro-body-double

./: .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  README-OPENCODE.md  README.md  chore_timers.yaml.example  install-opencode.sh  install.sh  opencode.json  pomodoro.py  pyproject.toml  reminders.yaml.example  settings.json
.opencode/plugins/: pomodoro.ts
claude_voice/: config.py  stt_input.py  tts_output.py
hooks/: pomodoro-hook.sh  session-start.sh
pomodoro-open/: ARCHITECTURE.md  CHANGELOG.md  adapter_claude.py  adapter_opencode.py  pomodoro_core.py
scripts/: backup-data.sh
