[project]
name = "pomodoro-body-double"
version = "0.1.0"
description = "Pomodoro body doubling system with voice interface"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "piper-tts>=1.4.1",
    "sounddevice>=0.5",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "pexpect>=4.9",
]

[project.scripts]
claude-voice = "claude_voice.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_voice"]
